tests/interpreter-anf/fail/009-min.hyg
assert(min(3, 4) = 0)